tests/codegen-anf/pass/011-sqrt.hyg
assert(sqrt(16) = 4.0f);
assert(sqrt(25.0f) = 5.0f)