tests/codegen-anf/fail/008-sqrt.hyg
assert(sqrt(- 30) = 0.0f)